<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_drawer_one" />
        <item
            android:id="@+id/nav_deliveries"
            android:icon="@drawable/ic_deliveries"
            android:title="@string/navigation_drawer_two" />
        <item
            android:id="@+id/nav_completed_deliveries"
            android:icon="@drawable/ic_completed_deliveries"
            android:title="@string/navigation_drawer_three" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/navigation_drawer_four" />
    </group>

</menu>
