<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardviewDel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardMaxElevation="5dp"
    android:background="@android:color/holo_blue_dark">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ECEFF1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="3.2"
            android:orientation="vertical"
            android:id="@+id/linearLayout">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:srcCompat="@drawable/delivery"
                android:id="@+id/imgVwDel" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="right"
            android:background="@color/cardview_light_background"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/delivery_customers_name"
                android:gravity="center"
                android:id="@+id/txtvwCustNme"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:padding="5dp"/>

            <TextView
                android:text="@string/delivery_customers_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtvwCustID"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"/>

            <TextView
                android:text="@string/delivery_customers_goods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtvwDelType"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"/>

            <TextView
                android:text="@string/delivery_customers_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtvwEstKm"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"/>

            <TextView
                android:text="@string/delivery_customers_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtvwAddress"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>